# embedded_workbench

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json  post_start.sh  save-kicad-state.py  setup-kicad.py
.github/workflows/: repo_sync.yml
doc/: ecw.md  ew.md
doc/development_methodology/: development_methodology_overview.md
doc/development_methodology/assets/: v_model.drawio
doc/development_methodology/hardware_domain/: hardware_domain_overview.md
doc/development_methodology/hardware_domain/processes/: hw-implementation.md  hw-requirements.md
doc/development_methodology/hardware_domain/resources/: hardware_test_definition.md  kicad_state_in_devcontainer.md  kicad_workflow.md
doc/development_methodology/mechanical_domain/: mechanical_domain_overview.md
doc/development_methodology/mechanical_domain/processes/: mech-implementation.md  mech-requirements.md
doc/development_methodology/resources/: architecture_definition.md  python_coding_guidelines.md  requirements_definition.md
doc/development_methodology/software_domain/: software_domain_overview.md
doc/development_methodology/software_domain/processes/: sw-architecture.md  sw-detailed-design.md  sw-implementation.md  sw-integration-test.md  sw-qualification-test.md  sw-requirements.md  sw-unit-test.md
doc/development_methodology/software_domain/resources/: custom_cmake_functions.md  embedded_c_coding_guidelines.md  software_test_definition.md
doc/development_methodology/specifications/: specifications_overview.md
doc/development_methodology/system_domain/: system_domain_overview.md
doc/embedded_c_coding_guidelines/: embedded_c_coding_guidelines.md
doc/python_coding_guidelines/: template.py
doc/resources/: ai_assisted_sdd.md  vscode_workflow.md
doc/technical_notes/: CMake_weak_symbol_oddities.md  ai_assisted_development.md  embedded_target_remote_HiL_testing.md  embedded_target_remote_debugging.md  embedded_target_remote_logging.md  raspberry_pi_setup.md
skills/hw-requirements/: SKILL.md
skills/mech-requirements/: SKILL.md
skills/spec-review/: SKILL.md
skills/spec-review/references/: docs.md
skills/specs-definition/: SKILL.md
skills/specs-definition/references/: docs.md
skills/sw-architecture/: SKILL.md
skills/sw-architecture/references/: docs.md
skills/sw-debug/: SKILL.md
skills/sw-debug/references/: docs.md
skills/sw-detailed-design/: SKILL.md
skills/sw-detailed-design/references/: docs.md
skills/sw-fuzz-corpus/: SKILL.md
skills/sw-fuzz-corpus/references/: docs.md
skills/sw-implementation/: SKILL.md
skills/sw-implementation/references/: docs.md
skills/sw-integration-test/: SKILL.md
skills/sw-integration-test/references/: docs.md
skills/sw-qualification-test/: SKILL.md
skills/sw-qualification-test/references/: docs.md
skills/sw-requirements/: SKILL.md
skills/sw-requirements/references/: docs.md
skills/sw-review/: SKILL.md
skills/sw-review/references/: docs.md
skills/sw-unit-test/: SKILL.md
skills/sw-unit-test/references/: docs.md
skills/sys-architecture/: SKILL.md
skills/sys-architecture/references/: docs.md
skills/sys-integration-test/: SKILL.md
skills/sys-integration-test/references/: docs.md
skills/sys-qualification-test/: SKILL.md
skills/sys-qualification-test/references/: docs.md
skills/sys-requirements/: SKILL.md
skills/sys-requirements/references/: docs.md
skills/sys-review/: SKILL.md
skills/workbench-debug/: SKILL.md
skills/workbench-debug/references/: docs.md
src/doc/: ecf.md
src/embedded_assert_framework/doc/: eaf.md
src/embedded_assert_framework/inc/: eaf.h
src/embedded_assert_framework/src/: eaf.c
src/embedded_base_framework/doc/: ebf.md
src/embedded_base_framework/inc/: ebf.h  ebf_utils.h
src/embedded_fake_framework/doc/: eff.md
src/embedded_fake_framework/inc/: eff.h
src/embedded_middleware_framework/doc/: emf.md
src/embedded_middleware_framework/inc/: emf.h
src/embedded_middleware_framework/src/: CMakeLists.txt
src/embedded_platform_framework/doc/: epf.md
src/embedded_test_framework/doc/: etf.md
src/embedded_test_framework/inc/: etf.h
src/embedded_test_framework/src/: etf.c
src/event_driven_framework/doc/: edf.md
src/event_driven_framework/inc/: edf.h  edf_active_object.h  edf_event.h  edf_event_queue.h  edf_hsm.h  edf_pool.h  edf_time_event.h
sw/ecf/doc/: ecf.md
sw/ecf/embedded_base_framework/: ebf_config.h.in
sw/ecf/event_driven_framework/: CMakeLists.txt
tools/cmake/functions/: ect_add_executable.cmake
tools/cmake/toolchains/: arm_gcc.cmake  linux_afl_clang_lto.cmake  linux_clang.cmake  linux_gcc.cmake
tools/kicad_state/: kicad_state.md  kicad_state_common.py  restore_kicad_state.py  save_kicad_state.py
tools/repo_sync/: repos.lock.json
tools/scripts/: asm_format.py  run_target_logging_server.py  run_target_test.py
tools/third_party_sync/: repos.json  repos.lock.json
(+119 files in other folders)
